-
Question/Request
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0
-
None
-
9223372036854775807
According to my web searches, the approved way to find out the
needed alignment for the i/o is the result of the BLKSSZGET ioctl:
ioctl (fd, BLKSSZGET, &(align))
However, on Lustre we get the error:
Inappropriate ioctl for device
Is this ioctl supported and I'm just doing it wrong?
Or is this ioctl indeed not allowed on Lustre ? And if so,
what is the approved way to find out the alignment ?